--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'sync'"></span>
+      <span [translate]="'Sync'"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
