--- a/src/pages/launcher/launcher.html
+++ b/src/pages/launcher/launcher.html
@@ -6,9 +6,9 @@
         <div class="logo">
           <img [src]="logoUrl">
         </div>
-        <p [translate]="'innovation in every dimension'">Innovation in every dimension</p>
+        <p [translate]="'Innovation in every dimension'"></p>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <loading [loadingSize]="'large'" [loadingMessage]="'loading'"></loading>
+  <loading [loadingSize]="'large'" [loadingMessage]="''"></loading>
 </ion-content>
