--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -4,7 +4,9 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{'dashboard'|translate}}</ion-title>
+        <ion-title>
+            <span [translate]="'Dashboard'"></span>
+        </ion-title>
     </ion-navbar>
 
 </ion-header>
@@ -15,7 +17,7 @@
     <ion-grid>
         <!-- loading area -->
         <div *ngIf="loading$ | async">
-            <loading [loadingMessage]="'loading_dashboard'|translate" [loadingSize]="'large'"></loading>
+            <loading [loadingMessage]="translationMapper['Discovering dashboards']" [loadingSize]="'large'"></loading>
         </div>
         <!-- end of loading area -->
 
@@ -35,7 +37,7 @@
 
             <!-- no dashboard section -->
             <div *ngIf="(visualizationObjects$ | async).length == 0">
-                <empty-list-notification [emptyListMessage]="'there_no_dashboard_item_found'|translate"></empty-list-notification>
+                <empty-list-notification [emptyListMessage]="translationMapper['There no dashboard item found']"></empty-list-notification>
             </div>
             <!-- end of no dashboard section -->
 
@@ -43,7 +45,7 @@
             <div class="dashboard-card" *ngFor="let visualizationObject of visualizationObjects$ | async">
 
                 <!-- visualization card title section -->
-                <ion-row (tap)="toggleVisualization(visualizationObject)" style="padding : 2px;">
+                <ion-row (tap)="toggleVisualization(visualizationObject)" style="padding-top : 2px; padding-bottom: 2px">
                     <ion-col col-11>
                         <ion-icon color="primary">
                             <img class="dashboard-item-icon" [src]="icons[visualizationObject.details.currentVisualization]" />
@@ -64,109 +66,14 @@
                 <!-- end of visualization card title section -->
 
                 <!-- visualization card body section -->
-                <ion-row *ngIf="visualizationObject.details.expanded">
-                    <ion-col>
+                <div *ngIf="visualizationObject.details.expanded">
 
-                        <div class="visualization-card-header" *ngIf="visualizationObject.details.loaded">
-                            <div class="visualization-card-header-left">
-                                <div class="visualization-filter-section-container" *ngIf="!visualizationObject.details.nonVisualizable">
-                                    <app-visualization-filter-section [selectedDimensions]="getSelectedDimensions(visualizationObject)" [visualizationType]="visualizationObject.details.currentVisualization"
-                                        [loaded]="visualizationObject.details.loaded" (onFilterUpdate)="onFilterUpdate($event,visualizationObject)"
-                                        (onLayoutUpdate)="onLayoutUpdate($event,visualizationObject)"></app-visualization-filter-section>
-                                </div>
-                            </div>
-                        </div>
+                    <dashboard-visualization-card [visualizationObject]="visualizationObject" (onOpeningFullScreen)="openDashboardInFullScreen($event)"
+                        [currentUser]="currentUser$ | async "></dashboard-visualization-card>
 
+                    <!-- end of visualization card body section -->
+                </div>
 
-                        <!-- visualization card loading section -->
-                        <div *ngIf="!visualizationObject.details.loaded">
-                            <loading [loadingSize]="'large'" [loadingMessage]="'loading_visualization'|translate"></loading>
-                            <!-- <app-visualization-card-loader [visualizationType]="visualizationObject.details.currentVisualization"></app-visualization-card-loader> -->
-                        </div>
-                        <!-- end of visualization card loading section -->
-
-                        <!-- visualization card error message section -->
-                        <div *ngIf="visualizationObject.details.loaded && visualizationObject.details.hasError">
-                            <warning [warningMessage]="visualizationObject.details.ErrorMessage"></warning>
-                        </div>
-                        <!-- end of visualization card error message section -->
-
-                        <div *ngIf="visualizationObject.details.loaded && !visualizationObject.details.hasError" class="dashboard-card-body">
-
-                            <div [style.minHeight]="'200px'" [style.maxHeight]="visualizationObject.details.itemHeight">
-                                <!--chart visualization-->
-                                <div class="chart-visualization">
-                                    <app-chart-list *ngIf="visualizationObject.details.currentVisualization === 'CHART'" [visualizationLayers]="visualizationObject.layers"
-                                        [visualizationId]="visualizationObject.id" [chartHeight]="visualizationObject.details.itemHeight"></app-chart-list>
-                                </div>
-                                <!--end of chart visualization-->
-                                <!--table block-->
-                                <div class="table-visualization">
-                                    <app-table-list *ngIf="visualizationObject.details.currentVisualization === 'TABLE'" [visualizationType]="visualizationObject.type"
-                                        [visualizationLayers]="visualizationObject.layers">
-
-                                    </app-table-list>
-                                </div>
-                                <!--end of table block-->
-
-                                <!-- map block -->
-                                <div class="map-container" *ngIf="visualizationObject.details.currentVisualization === 'MAP'">
-                                    <app-map [vizObject]="visualizationObject"></app-map>
-                                </div>
-                                <!-- end of map block -->
-                                <!-- users block -->
-                                <div class="users-container-block" *ngIf="visualizationObject.details.currentVisualization === 'USERS'">
-                                    <app-users-container [visualizationLayers]="visualizationObject.layers"></app-users-container>
-                                </div>
-                                <!-- end of users block -->
-
-                                <!-- resources block -->
-                                <div class="resources-container-block" *ngIf="visualizationObject.details.currentVisualization === 'RESOURCES'">
-                                    <app-resources-container [visualizationLayers]="visualizationObject.layers"></app-resources-container>
-                                </div>
-                                <!-- end of resources block -->
-
-                                <!-- resources block -->
-                                <div class="resources-container-block" *ngIf="visualizationObject.details.currentVisualization === 'REPORTS'">
-                                    <app-reports-container [visualizationLayers]="visualizationObject.layers"></app-reports-container>
-                                </div>
-                                <!-- end of resources block -->
-
-                                <!-- app block -->
-                                <div class="app-container-block" *ngIf="visualizationObject.details.currentVisualization === 'APP'">
-                                    <app-app-container [height]="visualizationObject.details.itemHeight" [currentUser]="currentUser$ | async" [appUrl]="'api/apps/' + visualizationObject.details.appKey + '/index.html?dashboardItemId=' + visualizationObject.id"></app-app-container>
-                                </div>
-                                <!-- end of app block -->
-
-                                <!--dictionary block-->
-                                <div class="dictionary-container" [style.maxheight]="visualizationObject.details.cardHeight" *ngIf="visualizationObject.details.currentVisualization === 'INFO'">
-                                    <app-dictionary-list [metadataIdentifiers]="visualizationObject.details.metadataIdentifiers"></app-dictionary-list>
-                                </div>
-                                <!--end of dictionary block-->
-                            </div>
-                        </div>
-
-                        <!-- visualization interpretation -->
-                        <div *ngIf="opendeInterpreationsMapper[visualizationObject.id]">
-                            <div class="interpretation-container" *ngIf="visualizationObject.details.loaded && !visualizationObject.details.hasError && !visualizationObject.details.nonVisualizable">
-                                <div class="interpretation-list" *ngFor="let layer of visualizationObject.layers">
-                                    <app-interpretation-list [interpretations]="layer.interpretation.interpretations" [visualizationTypeObject]="{id: layer.interpretation.id, type: layer.interpretation.type}"
-                                        [currentUser]="currentUser$ | async" [rootUrl]="''" [itemHeight]="'100px'"></app-interpretation-list>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end of visualization interpretation -->
-                    </ion-col>
-
-                    <div class="visualization-card-footer" *ngIf="visualizationObject.details.loaded">
-                        <div *ngIf="visualizationObject.details.nonVisualizable">&nbsp;</div>
-                        <div class="visualization-card-footer-left" *ngIf="!visualizationObject.details.nonVisualizable">
-                            <app-visualization-types-section (onToggleInterpretation)="toggleInterpretation(visualizationObject)" [currentVisualization]="visualizationObject.details.currentVisualization"
-                                (onCurrentVisualizationChange)="currentVisualizationChange($event,visualizationObject)"></app-visualization-types-section>
-                        </div>
-                    </div>
-                </ion-row>
-                <!-- end of visualization card body section -->
 
             </div>
         </div>
