Appliy directive to fix translations for loading for report module as well as data set completeness informations

--- a/src/pages/data-entry/entry-form-completeness/entry-form-completeness.html
+++ b/src/pages/data-entry/entry-form-completeness/entry-form-completeness.html
@@ -2,7 +2,7 @@
 
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'completeness information'"></span>
+      <span [translate]="'Completeness information'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
