--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs #myTabs color="primary" tabsHighlight="true" tabsPlacement="top">
-  <ion-tab [root]="tab1Root" tabTitle="{{'apps'|translate  }}" tabIcon="apps"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="{{'Apps'|translate  }}" tabIcon="apps"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="{{ accountName }}" tabIcon="options"></ion-tab>
 </ion-tabs>
