Adding back button on dashboard filter, hide and show column modal as well as tracked entity widget selections

--- a/src/pages/dashboard/dashboard-filter/dashboard-filter.html
+++ b/src/pages/dashboard/dashboard-filter/dashboard-filter.html
@@ -4,9 +4,11 @@
     <ion-title>
       <span [translate]="'Dashboard list'"></span>
     </ion-title>
-    <ion-buttons end>
+    <ion-buttons left>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
-        <ion-icon name="close"></ion-icon>
+        &nbsp;&nbsp;&nbsp;
+        <ion-icon name="arrow-back"></ion-icon>
+        &nbsp;&nbsp;
       </button>
     </ion-buttons>
   </ion-toolbar>
