--- a/src/pages/option-list-modal/option-list-modal.html
+++ b/src/pages/option-list-modal/option-list-modal.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the OptionListModalPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>option-list-modal</ion-title>
+    <ion-title> {{ title }}</ion-title>
+    <ion-buttons end (click)="dismiss()">
+      <button ion-button icon-only>
+        <ion-icon name='close'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+  <div *ngIf="isLoading">
+    <loading [loadingSize]="'large'"></loading>
+  </div>
+  <div *ngIf="!isLoading">
+    <ion-searchbar (ionInput)="getItems($event)" placeholder="{{'Search'|translate}}"></ion-searchbar>
+    <ion-grid>
+      <ion-row>
+        {{ options |json}}
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
+<ion-footer>
+  <ion-buttons end (click)="dismiss()">
+    <button ion-button outline color="danger" text-capitalize>
+      <span [translate]="'Cancel'"></span>
+    </button>
+  </ion-buttons>
+
+</ion-footer>
