--- a/src/pages/organisation-unit-search/organisation-unit-search.html
+++ b/src/pages/organisation-unit-search/organisation-unit-search.html
@@ -15,7 +15,6 @@
     <loading [loadingSize]="'large'"></loading>
   </div>
   <div *ngIf="!isLoading">
-    {{ ouIdsWithAssigments|json }}
     <ion-searchbar (ionInput)="getItems($event)" placeholder="{{'Search'|translate}}"></ion-searchbar>
     <ion-grid>
       <ion-row>
@@ -23,7 +22,7 @@
           <div class="animated fadeIn">
             <ion-list>
               <ion-item *ngFor="let organisationUnit of arrayOfOrganisationUnitsArray[currentPage - 1];trackBy: trackByFn" (click)="selectOrganisationUnit(organisationUnit)">
-                <span ion-text [color]="(currentValue && currentValue == organisationUnit.name) ?'current' : 'font-color'">{{ organisationUnit.name }}</span>
+                <span ion-text [color]="(ouIdsWithAssigments && ouIdsWithAssigments.indexOf(organisationUnit.id)  == -1 )? 'ou-assigment-issues' : (currentSelectedOrgUnitName == organisationUnit.name) ?'current' : 'font-color'">{{ organisationUnit.name }}</span>
               </ion-item>
             </ion-list>
           </div>
