--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -87,11 +87,14 @@
                     <hr>
                   </div>
                   <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
-                    <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
-                      <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
-                        [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
-                        [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event)"></tracked-entity-inputs>
-                    </div>
+                    <form>
+                      <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
+                        <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
+                          [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                          [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event)"></tracked-entity-inputs>
+                      </div>
+                    </form>
+
                   </div>
                 </div>
 
@@ -122,8 +125,10 @@
                 <div *ngIf="programStages && programStages.length > 0">
                   <div *ngFor="let programStage of programStages">
                     <div *ngIf="widget.id == programStage.id">
-                      <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id" [currentWidgetIndex]="currentWidgetIndex"
-                        [isLastStage]="(currentWidgetIndex == programStages.length)" (onChange)="updateWidgetPagination($event)"></program-stage-tracker-based>
+                      <form>
+                        <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id" [currentWidgetIndex]="currentWidgetIndex"
+                          [isLastStage]="(currentWidgetIndex == programStages.length)" (onChange)="updateWidgetPagination($event)"></program-stage-tracker-based>
+                      </form>
                     </div>
                   </div>
                 </div>
